--- a/www/index.html
+++ b/www/index.html
@@ -97,13 +97,13 @@
           <div class="carousel-inner">
             <div class="active item">
               <h1>Learn. Do. Share.</h1>
-              <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+              <p>A hackerspace (also referred to as a hacklab, makerspace, or hackspace) is a community-operated workspace where people with common interests, often in computers, technology, science, digital art or electronic art, can meet, socialise and/or collaborate.</p>
               <p><a href="#" class="btn btn-primary btn-large">What is a hackerspace? &raquo;</a></p>
             </div>
             <div class="item">
-              <h1>Hello, world!</h1>
-              <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-              <p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+              <h1>Learn. Do. Share.</h1>
+              <p>A hackerspace (also referred to as a hacklab, makerspace, or hackspace) is a community-operated workspace where people with common interests, often in computers, technology, science, digital art or electronic art, can meet, socialise and/or collaborate.</p>
+              <p><a href="#" class="btn btn-primary btn-large">What is a hackerspace? &raquo;</a></p>
             </div>
           </div>
         </div>
@@ -115,19 +115,25 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="span4">
-          <h2>Heading</h2>
+          <h2>Projects</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <p><a class="btn" href="#">View projects &raquo;</a></p>
         </div>
         <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <h2>Discussions</h2>
+          <p>Discussions from the workgroups</p>
+          <ul>
+            <li><a href="#">Linkbot: certainly fun for those that like robotics</a></li>
+            <li><a href="#">Door lock</a></li>
+            <li><a href="#">Removing the junk in the garden: renting a container this weekend</a></li>
+            <li><a href="#">Create truly natural objects by making 3D curves instead of 2D layers</a></li>
+          </ul>
+          <p><a class="btn" href="#">View all discussions &raquo;</a></p>
        </div>
         <div class="span4">
-          <h2>Heading</h2>
+          <h2>Events</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <p><a class="btn" href="#">View events &raquo;</a></p>
         </div>
       </div>
 
