--- a/www/index.html
+++ b/www/index.html
@@ -121,7 +121,7 @@
         </div>
         <div class="span4">
           <h2>Discussions</h2>
-          <p>Discussions from the workgroups</p>
+          <p>Discussions from the projects</p>
           <ul>
             <li><a href="#">Linkbot: certainly fun for those that like robotics</a></li>
             <li><a href="#">Door lock</a></li>
