--- a/www/projects.html
+++ b/www/projects.html
@@ -27,7 +27,7 @@
           <a class="brand" href="#">HSBXL</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
                 <ul class="dropdown-menu">
@@ -42,7 +42,7 @@
                 </ul>
               </li>
 
-              <li class="dropdown">
+              <li class="dropdown active">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="projects.html">Projects</a></li>
@@ -89,46 +89,49 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container projects">
 
-      <div id="myCarousel" class="carousel slide">
-        <!-- Carousel items -->
-        <div class="hero-unit">
-          <div class="carousel-inner">
-            <div class="active item">
-              <h1>Learn. Do. Share.</h1>
-              <p>A hackerspace (also referred to as a hacklab, makerspace, or hackspace) is a community-operated workspace where people with common interests, often in computers, technology, science, digital art or electronic art, can meet, socialise and/or collaborate.</p>
-              <p><a href="#" class="btn btn-primary btn-large">What is a hackerspace? &raquo;</a></p>
-            </div>
-          </div>
-        </div>
-        <!-- Carousel nav -->
-        <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-        <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-      </div>
+      <h1>HSBXL Projects</h1>
+
+       <p class="topbutton"><a href="#" class="btn btn-primary">View project archive &raquo;</a></p>
 
       <!-- Example row of columns -->
       <div class="row">
-        <div class="span4">
-          <h2>Projects</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View projects &raquo;</a></p>
+        <div class="span2">
+          <h2>Scanbot</h2>
+          <img src="images/projects/scanbot.png">
+          <p class="description">Zen and the art of automatic book scanning.</p>
+          <p><a class="btn" href="#">View 3 subprojects &raquo;</a></p>
         </div>
-        <div class="span4">
-          <h2>Discussions</h2>
-          <p>Discussions from the projects</p>
-          <ul>
-            <li><a href="#">Linkbot: certainly fun for those that like robotics</a></li>
-            <li><a href="#">Door lock</a></li>
-            <li><a href="#">Removing the junk in the garden: renting a container this weekend</a></li>
-            <li><a href="#">Create truly natural objects by making 3D curves instead of 2D layers</a></li>
-          </ul>
-          <p><a class="btn" href="#">View all discussions &raquo;</a></p>
+        <div class="span2">
+          <h2>Wandering Star</h2>
+          <img src="images/projects/wandering-star.png">
+          <p class="description">HSBXL on the road. Building a portable HSBXL server.</p>
+          <p><a class="btn" href="#">View 2 subprojects &raquo;</a></p>
        </div>
-        <div class="span4">
-          <h2>Events</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View events &raquo;</a></p>
+        <div class="span2">
+          <h2>Radio-Ruelle</h2>
+          <img src="images/projects/radio-ruelle.png">
+          <p class="description">A live recording and streaming radio device.</p>
+          <p><a class="btn" href="#">View 2 subprojects &raquo;</a></p>
+        </div>
+        <div class="span2">
+          <h2>Aquaponics</h2>
+          <img src="images/projects/aquaponics.png">
+          <p class="description">Growing fish and vegetables with aquaponics.</p>
+          <p><a class="btn" href="#">View 4 subprojects &raquo;</a></p>
+        </div>
+        <div class="span2">
+          <h2>Space++</h2>
+          <img src="images/projects/space.png">
+          <p class="description">Building and improving our own hackerspace.</p>
+          <p><a class="btn" href="#">View 12 subprojects &raquo;</a></p>
+        </div>
+        <div class="span2">
+          <h2>Tools</h2>
+          <img src="images/projects/tools.png">
+          <p class="description">Build our own tools.</p>
+          <p><a class="btn" href="#">View 7 subprojects &raquo;</a></p>
         </div>
       </div>
 
