wat is a hackerspace?

--- a/www/projects.html
+++ b/www/projects.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Hackerspace Brussels | HSBXL</title>
+    <title>Projects | HSBXL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -11,7 +11,6 @@
     <!-- Le styles -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="css/screen.css" rel="stylesheet">
-
   </head>
 
   <body>
@@ -24,14 +23,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">HSBXL</a>
+          <a class="brand" href="/">HSBXL</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="/">Home</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">What is a hackerspace?</a></li>
+                  <li><a href="what-is-hackerspace.html">What is a hackerspace?</a></li>
                   <li><a href="#">Who are we?</a></li>
                   <li><a href="#">Meetings and events</a></li>
                   <li class="divider"></li>
@@ -101,37 +100,37 @@
           <h2>Scanbot</h2>
           <img src="images/projects/scanbot.png">
           <p class="description">Zen and the art of automatic book scanning.</p>
-          <p><a class="btn" href="#">View 3 subprojects &raquo;</a></p>
+          <p><a class="btn" href="#">3 subprojects</a></p>
         </div>
         <div class="span2">
           <h2>Wandering Star</h2>
           <img src="images/projects/wandering-star.png">
           <p class="description">HSBXL on the road. Building a portable HSBXL server.</p>
-          <p><a class="btn" href="#">View 2 subprojects &raquo;</a></p>
+          <p><a class="btn" href="#">2 subprojects</a></p>
        </div>
         <div class="span2">
           <h2>Radio-Ruelle</h2>
           <img src="images/projects/radio-ruelle.png">
           <p class="description">A live recording and streaming radio device.</p>
-          <p><a class="btn" href="#">View 2 subprojects &raquo;</a></p>
+          <p><a class="btn" href="#">2 subprojects</a></p>
         </div>
         <div class="span2">
           <h2>Aquaponics</h2>
           <img src="images/projects/aquaponics.png">
           <p class="description">Growing fish and vegetables with aquaponics.</p>
-          <p><a class="btn" href="#">View 4 subprojects &raquo;</a></p>
+          <p><a class="btn" href="#">4 subprojects</a></p>
         </div>
         <div class="span2">
           <h2>Space++</h2>
           <img src="images/projects/space.png">
           <p class="description">Building and improving our own hackerspace.</p>
-          <p><a class="btn" href="#">View 12 subprojects &raquo;</a></p>
+          <p><a class="btn" href="#">12 subprojects</a></p>
         </div>
         <div class="span2">
           <h2>Tools</h2>
           <img src="images/projects/tools.png">
           <p class="description">Build our own tools.</p>
-          <p><a class="btn" href="#">View 7 subprojects &raquo;</a></p>
+          <p><a class="btn" href="#">7 subprojects</a></p>
         </div>
       </div>
 
