--- a/www/what-is-hackerspace.html
+++ b/www/what-is-hackerspace.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Hackerspace Brussels | HSBXL</title>
+    <title>What is a hackerspace? | HSBXL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -26,8 +26,8 @@
           <a class="brand" href="/">HSBXL</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="/">Home</a></li>
-              <li class="dropdown">
+              <li><a href="/">Home</a></li>
+              <li class="dropdown active">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="what-is-hackerspace.html">What is a hackerspace?</a></li>
@@ -90,50 +90,53 @@
 
     <div class="container">
 
-      <div id="myCarousel" class="carousel slide">
-        <!-- Carousel items -->
-        <div class="hero-unit">
-          <div class="carousel-inner">
-            <div class="active item">
-              <h1>Learn. Do. Share.</h1>
-              <p>A hackerspace (also referred to as a hacklab, makerspace, or hackspace) is a community-operated workspace where people with common interests, often in computers, technology, science, digital art or electronic art, can meet, socialise and/or collaborate.</p>
-              <p><a href="what-is-hackerspace.html" class="btn btn-primary btn-large">What is a hackerspace? &raquo;</a></p>
-            </div>
-          </div>
+      <h1>What is a hackerspace?</h1>
+      
+      <div class="row-fluid">
+        <div class="span9">
+          A hackerspace (also referred to as a hacklab, makerspace, or hackspace) is a community-operated workspace where people with common interests, often in computers, technology, science, digital art or electronic art, can meet, socialise and/or collaborate.
+
+          <h2>Activities <a href="projects.html" class="btn btn-primary">Projects at HSBXL &raquo;</a></h2>
+          <p>Hackerspaces can be viewed as open community labs incorporating elements of machine shops, workshops and/or studios where hackers can come together to share resources and knowledge to build and make things.
+          Many hackerspaces participate in the use and development of free software, open hardware, and alternative media. They are often physically located in infoshops, social centers, adult education centers, public schools, or on university campuses, but may relocate to industrial or warehouse space when they need more room.</p>
+
+          <p>Hackerspaces with open membership became common within Germany in the 90s in the orbit of the German Chaos Computer Club, with the C-base being probably the most impressive example. The concept however was limited to less than a dozen of spaces within Germany, and did not spread beyond borders at first. Most likely this was because initial founding costs were prohibitive for small groups without the support of a large organization like the CCC.</p>
+
+          <p>In 2006, Paul Bohm came up with a fundraising strategy based on the Street Performer Protocol to build Metalab in Vienna, Austria, and became its founding director. He and others started the Hackerspaces.org community in 2007 which maintains a list of many hackerspaces, and documents patterns on how to start and run them. As of 2012, there are an estimated 700 to 1,100 active hackerspaces all over the world and the numbers are growing.</p>
+
+          <p>Most recently the advent of crowdfunding and Kickstarter have put the tools required to build hackerspaces within reach of an even wider audience. Right now those tools are for example used by Bilal Ghalib, who had previously worked on a Hackerspace documentary, and others to bring the hackerspace concept to the Middle East.</p>
+
+          <h2>Functions</h2>
+          <p>The specific activities that take place at hackerspaces vary from place to place. In general, hackerspaces function as centers for peer learning and knowledge sharing, in the form of workshops, presentations, and lectures. They usually also offer social activities for their members, such as game nights and parties. They typically provide space for members to work on their individual projects, or to collaborate on group projects with other members. Hackerspaces may also operate computer tool lending libraries, or physical tool lending libraries.</p>
+
+          <p>The building or facility the hackerspace occupies is important, because it provides physical infrastructure that members need to complete their projects. In addition to space, most hackerspaces provide electrical power, computer servers and networking with Internet connectivity. Well-equipped hackerspaces may provide machine tools, audio equipment, video projectors, game consoles, electronic instrumentation (such as oscilloscopes and signal generators), electronic components and raw materials for hacking, and various other tools for electronics fabrication and building things.[4] Some hackerspaces provide food storage and food preparation equipment, and may teach courses in basic or advanced cooking. Tools and material for sewing, craft, and art are also important at many hackerspaces.</p>
+
+          <p>&nbsp;</p>
+
         </div>
-        <!-- Carousel nav -->
-        <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-        <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+
+       <div class="span3 sidebar-nav">
+        <div class="gallery">
+          <img src="http://farm9.staticflickr.com/7325/9052749269_57cedb52b4_m.jpg">
+          <img src="http://farm9.staticflickr.com/8478/8239211791_2ffc406241_m.jpg">
+          <img src="http://farm9.staticflickr.com/8490/8240273634_69730cd2db_m.jpg">
+          <img src="http://farm9.staticflickr.com/8207/8240274084_5e07abb5b6_m.jpg">
+          <img src="http://farm9.staticflickr.com/8065/8239207191_e372461330_m.jpg">
+          <img src="http://farm9.staticflickr.com/8342/8240277294_b8365dbd7c_m.jpg">
+          <img src="http://farm9.staticflickr.com/7226/7121346827_4971a99cfb_m.jpg">
+          <img src="http://farm9.staticflickr.com/7225/7121369773_a5db2278b6_m.jpg">
+          <img src="http://farm9.staticflickr.com/8025/6975283666_699becd8de_m.jpg">
+          <img src="http://farm8.staticflickr.com/7042/7121349625_7577742acd_m.jpg">
+          <img src="http://farm8.staticflickr.com/7005/6583956001_a0482b6368_m.jpg">
+          <img src="http://farm5.staticflickr.com/4147/4967605996_5170ff86ff_m.jpg">
+        </div>
       </div>
+    </div>
 
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span4">
-          <h2>Projects</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="projects.html">View projects &raquo;</a></p>
-        </div>
-        <div class="span4">
-          <h2>Discussions</h2>
-          <p>Discussions from the projects</p>
-          <ul>
-            <li><a href="#">Linkbot: certainly fun for those that like robotics</a></li>
-            <li><a href="#">Door lock</a></li>
-            <li><a href="#">Removing the junk in the garden: renting a container this weekend</a></li>
-            <li><a href="#">Create truly natural objects by making 3D curves instead of 2D layers</a></li>
-          </ul>
-          <p><a class="btn" href="#">View all discussions &raquo;</a></p>
-       </div>
-        <div class="span4">
-          <h2>Events</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View events &raquo;</a></p>
-        </div>
-      </div>
-
-      <hr>
-
-      <div class="footer">Except where otherwise noted, content on this site is licensed under a Creative Commons Attribution 3.0 License.</div>
+    <hr>
+    <div class="footer">
+      Except where otherwise noted, content on this site is licensed under a Creative Commons Attribution 3.0 License.
+    </div>
 
     </div> <!-- /container -->
 
