--- a/www/become-member.html
+++ b/www/become-member.html
@@ -10,6 +10,7 @@
 
     <!-- Le styles -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="css/screen.css" rel="stylesheet">
   </head>
 
@@ -26,8 +27,8 @@
           <a class="brand" href="index.html">HSBXL</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="index.html">Home</a></li>
-              <li class="dropdown">
+              <li class=""><a href="index.html">Home</a></li>
+              <li class="active dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="what-is-hackerspace.html">What is a hackerspace?</a></li>
@@ -101,16 +102,16 @@
 
     <div class="container">
 
-      <h1>Become a member <a href="member-benefits.html" class="btn btn-primary btn-small">Member benefits &raquo;</a></h1>
+      <h1>Become a member <a href="member-benefits.html" class="btn btn-primary btn-small">Member benefits</a></h1>
       
       <div class="row-fluid">
         <div class="span9">
           <h2>How to become member?</h2>
           <ul>
             <li>Fill out the <a href="http://hackerspace.be/smw/images/0/01/HackerSpaceBrussels-membership.odt">registration form</a> and put it in the "new members" box on te ground floor.</li>
-            <li>Each TechTue meeting the applications are read out of the box</li>
-            <li>One month passes, during which you need 2 sponsors (members that trust you around) to sign their form</li>
-            <li>We send you an email with further instructions on how to pay your membership fee. </li>
+            <li>Each TechTue meeting the applications are read out of the box.</li>
+            <li>One month passes, during which you need 2 sponsors (members that trust you around) to sign your form.</li>
+            <li>We send you an email with further instructions on how to pay your membership fee.</li>
           </ul>
 
           <h2>What are the fees?</h2>
