--- a/www/member-benefits.html
+++ b/www/member-benefits.html
@@ -10,6 +10,7 @@
 
     <!-- Le styles -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="css/screen.css" rel="stylesheet">
   </head>
 
@@ -26,8 +27,8 @@
           <a class="brand" href="index.html">HSBXL</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="index.html">Home</a></li>
-              <li class="dropdown">
+              <li class=""><a href="index.html">Home</a></li>
+              <li class="active dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="what-is-hackerspace.html">What is a hackerspace?</a></li>
@@ -101,20 +102,20 @@
 
     <div class="container">
 
-      <h1>Member benefits <a href="become-member.html" class="btn btn-primary btn-small">Become a member &raquo;</a></h1>
+      <h1>Member benefits <a href="become-member.html" class="btn btn-primary btn-small">Become a member</a></h1>
       
       <div class="row-fluid">
         <div class="span9">
           <p>Next to being awesome, being a member gives you some benefits.</p>
 
-          <h2>Access with own RFID badge <a href="http://hackerspace.be/Doorlock" class="btn btn-mini">The doorlock project &raquo;</a></h2>
+          <h2>Access with own RFID badge <a href="http://hackerspace.be/Doorlock" class="btn btn-mini">The doorlock project</a></h2>
           <p>Every member has his personal badge which magically opens our front door.<br />
           Enter when you want, the space is your home 24/7. Mind the neighbours though :)</p>
 
           <h2>Start your own project</h2>
           <p>If you lack space at home, or your spouse won't allow you to setup your own mini nuclear reactor in the garage, maybe you find some place left at our space?</p>
 
-          <h2>You rock! <a href="http://www.youtube.com/watch?v=PNl9M5TxGC8#t=21" class="btn btn-primary btn-mini">Hurray! &raquo;</a></h2>
+          <h2>You rock! <a href="http://www.youtube.com/watch?v=PNl9M5TxGC8#t=21" class="btn btn-primary btn-mini">Hurray!</a></h2>
           <p>Having the hackerspace running is all thanks to our members and free contributions.</p>
 
         </div>
