--- a/www/what-is-hackerspace.html
+++ b/www/what-is-hackerspace.html
@@ -10,6 +10,7 @@
 
     <!-- Le styles -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="css/screen.css" rel="stylesheet">
   </head>
 
@@ -26,8 +27,8 @@
           <a class="brand" href="index.html">HSBXL</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="index.html">Home</a></li>
-              <li class="dropdown">
+              <li class=""><a href="index.html">Home</a></li>
+              <li class="dropdown active">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="what-is-hackerspace.html">What is a hackerspace?</a></li>
@@ -107,7 +108,7 @@
         <div class="span9">
           A hackerspace (also referred to as a hacklab, makerspace, or hackspace) is a community-operated workspace where people with common interests, often in computers, technology, science, digital art or electronic art, can meet, socialise and/or collaborate.
 
-          <h2>Activities <a href="index.html" class="btn btn-primary btn-mini">Events at HSBXL &raquo;</a> <a href="index.html" class="btn btn-primary btn-mini">Projects at HSBXL &raquo;</a></h2>
+          <h2>Activities <a href="index.html" class="btn btn-primary btn-mini">Events at HSBXL</a> <a href="index.html" class="btn btn-primary btn-mini">Projects at HSBXL</a></h2>
           <p>Hackerspaces can be viewed as open community labs incorporating elements of machine shops, workshops and/or studios where hackers can come together to share resources and knowledge to build and make things.
           Many hackerspaces participate in the use and development of free software, open hardware, and alternative media. They are often physically located in infoshops, social centers, adult education centers, public schools, or on university campuses, but may relocate to industrial or warehouse space when they need more room.</p>
 
